move th pics to root folder

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <h2 class="containerMainTitle">Find Your Dream BMW</h2>
           <div class="Blocks">
             <div class="containerContent firstChois">
-              <img src="../img/1.png" alt="">
+              <img src="./1.png" alt="">
               <div class="choisContent">
                 <h3>You Like it</h3>
                 <p>Visit Now</p>
@@ -99,7 +99,7 @@
               </div>
             </div> <!-- /firstChois -->
             <div class="containerContent secondChois">
-              <img src="../img/secondBMW.png" alt="">
+              <img src="./secondBMW.png" alt="">
               <div class="choisContent">
                 <h3>You Like it</h3>
                 <p>Visit Now</p>
@@ -108,7 +108,7 @@
               </div>
             </div> <!-- /secondChois -->
             <div class="containerContent thirdChois">
-              <img src="../img/3.png" alt="">
+              <img src="./3.png" alt="">
               <div class="choisContent">
                 <h3>You Like it</h3>
                 <p>Visit Now</p>
@@ -117,7 +117,7 @@
               </div>
             </div> <!-- /thirdChois -->
             <div class="containerContent fourthChois">
-              <img src="../img/fourthBMW.png" alt="">
+              <img src="./fourthBMW.png" alt="">
               <div class="choisContent">
                 <h3>You Like it</h3>
                 <p>Visit Now</p>
@@ -126,7 +126,7 @@
               </div>
             </div> <!-- /fourthChois -->
             <div class="containerContent fifthChois">
-              <img src="../img/fifthBMW.png" alt="">
+              <img src="./fifthBMW.png" alt="">
               <div class="choisContent">
                 <h3>You Like it</h3>
                 <p>Visit Now</p>
@@ -135,7 +135,7 @@
               </div>
             </div> <!-- /fifthChois -->
             <div class="containerContent sixthChois">
-              <img src="../img/sixthBMW.png" alt="">
+              <img src="./sixthBMW.png" alt="">
               <div class="choisContent">
                 <h3>You Like it</h3>
                 <p>Visit Now</p>
@@ -227,7 +227,7 @@
             <a href="" class="Appointment">Apply Appointment</a>
           </div> <!-- /VehicleConsultation -->
           <div class="VehicleConsultationDisplay">
-            <img src="../img/BMWConsultation.png"  alt="consultation IMG" class="VehicleConsultationImg"><br>
+            <img src="./BMWConsultation.png"  alt="consultation IMG" class="VehicleConsultationImg"><br>
             <ul>
               <li id="standardChoise"></li>
               <li></li>
@@ -315,7 +315,7 @@
 <div class="OurManagers">
   <div class="OurManagersContainer">
     <div class="OurManagersContainerContent">
-      <img src="../img/ManagerM.webp" alt="Manager Mohammad Omar">
+      <img src="./ManagerM.webp" alt="Manager Mohammad Omar">
       <div class="OurManagersTextContent">
         <h3 class="title">Rami Zaher</h3>
         <h5>Human Resources Manager</h5>
@@ -323,7 +323,7 @@
       <p>Manager with 5+ years of experience in the tech industry, leading teams to success in multiple projects.</p>
     </div><!-- /OurManagersContainerContent -->
     <div class="OurManagersContainerContent">
-      <img src="../img/Manager.webp" alt="Manager Hiba Ali">
+      <img src="./Manager.webp" alt="Manager Hiba Ali">
       <div class="OurManagersTextContent">
         <h3 class="title">Hiba Ali</h3>
         <h5>Senior HR Business Partner</h5>
@@ -340,7 +340,7 @@
     <h2 class="containerMainTitle">Our BMW Team</h2><br><br><br>
       <div class="TeamBlock">
         <div class="OurTeamSocialMedia">
-          <img src="../img/HR-Management.webp" alt="HR Management" class="TeamBlockIMG">
+          <img src="./HR-Management.webp" alt="HR Management" class="TeamBlockIMG">
           <div class="TeamBlockIcons">
             <i class="fa-brands fa-facebook-f"></i>
             <i class="fa-brands fa-linkedin-in"></i>
@@ -354,7 +354,7 @@
       </div>
       <div class="TeamBlock centerBlock">
         <div class="OurTeamSocialMedia">
-          <img src="../img/IT-Management.webp" alt="HR Management" class="TeamBlockIMG">
+          <img src="./IT-Management.webp" alt="HR Management" class="TeamBlockIMG">
           <div class="TeamBlockIcons">
             <i class="fa-brands fa-facebook-f"></i>
             <i class="fa-brands fa-linkedin-in"></i>
@@ -368,7 +368,7 @@
       </div>
       <div class="TeamBlock">
         <div class="OurTeamSocialMedia">
-          <img src="../img/Marketing-Management.webp" alt="HR Management" class="TeamBlockIMG">
+          <img src="./Marketing-Management.webp" alt="HR Management" class="TeamBlockIMG">
           <div class="TeamBlockIcons">
             <i class="fa-brands fa-facebook-f"></i>
             <i class="fa-brands fa-linkedin-in"></i>
@@ -390,7 +390,7 @@
   <div class="Agents">
     <div class="AgentBlock">
       <div class="AgentImgAndIcons">
-        <img src="../img/BMWGroup.webp" alt="Company Image">
+        <img src="./BMWGroup.webp" alt="Company Image">
         <div class="AgentSocialMediaIcons">
           <i class="fa-brands fa-facebook-f"></i><span>BMW Group</span>
           <i class="fa-brands fa-linkedin-in"></i><span>BMW Group</span>
@@ -406,7 +406,7 @@
     
     <div class="AgentBlock centerBlock">
       <div class="AgentImgAndIcons">
-        <img src="../img/BMW-NA.jpeg" alt="Company Image">
+        <img src="./BMW-NA.jpeg" alt="Company Image">
         <div class="AgentSocialMediaIcons">
           <i class="fa-brands fa-facebook-f"></i><span>BMW USA</span>
           <i class="fa-brands fa-linkedin-in"></i><span>BMW 50</span>
@@ -422,7 +422,7 @@
     
     <div class="AgentBlock">
       <div class="AgentImgAndIcons">
-        <img src="../img/parkLaneBMW.webp" alt="Company Image">
+        <img src="./parkLaneBMW.webp" alt="Company Image">
         <div class="AgentSocialMediaIcons">
           <i class="fa-brands fa-facebook-f"></i><span>Park Lane BMW</span>
           <i class="fa-brands fa-linkedin-in"></i><span>Park 17</span>
@@ -443,7 +443,7 @@
 <div class="footer">
   <div class="container">
     <div class="footerContent">
-      <img src="../img/FooterImg.jpeg" alt="">
+      <img src="./FooterImg.jpeg" alt="">
       <ul class="footerIcons">
         <li><i class="fa-brands fa-facebook-f"></i></li>
         <li><i class="fa-brands fa-linkedin-in"></i></li>
